[package]
name = "cushion"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cushion"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.26.0" }
fixed-point-decimal-math = { git = "https://github.com/Dodecahedr0x/fixed-point-decimal-math", branch = "master" }
solana-program = "~1.14.19"
pyth-sdk-solana = "0.7.2"
winnow = "=0.4.1"
toml_datetime = "=0.6.1"